--- a/src/styles/Section6.css
+++ b/src/styles/Section6.css
@@ -1,4 +1,4 @@
-.s7main{
+.s7main {
     width: 100%;
     min-height: 100vh;
     display: flex;
@@ -12,22 +12,24 @@
     align-items: center;
     position: relative;
 }
-.s7para1{
+
+.s7para1 {
     font-family: 'Manrope', sans-serif;
     letter-spacing: 2px;
-font-size: 35px;
-font-weight: bolder;
+    font-size: 35px;
+    font-weight: bolder;
 
 }
-.s6overlay{
+
+.s6overlay {
     width: 100%;
     min-height: 100%;
     background-color: #00000043;
-    mix-blend-mode:multiply;
+    mix-blend-mode: multiply;
     position: absolute;
 }
 
-.conta{
+.conta {
     position: relative;
     width: 100%;
     height: 100vh;
@@ -36,16 +38,17 @@ font-weight: bolder;
 
 }
 
-.fwbox{
-    
-        display: inline-block;
-        min-height: 106px;
-        min-width: 106px;
-        padding: 18px 0 10px;
-    
+.fwbox {
+
+    display: inline-block;
+    min-height: 106px;
+    min-width: 106px;
+    padding: 18px 0 10px;
+
 }
-#contaniner{
-    
+
+#contaniner {
+
     border-radius: 15px;
 
     width: 140%;
@@ -53,27 +56,27 @@ font-weight: bolder;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     column-gap: 50px;
-background-color: transparent;
+    background-color: transparent;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 
-  
+
     box-sizing: border-box;
 }
 
-#header{
+#header {
     grid-column: span 4;
     padding-bottom: 5px;
 }
 
-#header p{
+#header p {
     font-size: 22px;
     font-weight: 700;
 }
 
-#tabs{
+#tabs {
     display: flex;
     background-color: transparent;
     padding: 10px;
@@ -82,11 +85,11 @@ background-color: transparent;
     flex-direction: column;
 }
 
-#tabs input{
+#tabs input {
     display: none;
 }
 
-#tabs label{
+#tabs label {
     border-radius: 5px;
     width: 100%;
     min-width: 127px;
@@ -95,10 +98,11 @@ background-color: transparent;
     cursor: pointer;
 }
 
-#home-lb{
+#home-lb {
     /* background-color: #7B61FF; */
 }
-.boxdetail{
+
+.boxdetail {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -107,7 +111,7 @@ background-color: transparent;
     align-items: center;
 }
 
-#text{
+#text {
     grid-column: span 3;
     background-color: transparent;
     padding: 10px;
@@ -116,37 +120,40 @@ background-color: transparent;
     align-items: center;
 }
 
-#text .txt-head{
+#text .txt-head {
     font-weight: 600;
     font-size: 18px;
     padding: 5px 0;
 }
 
-.fwimg{
+.fwimg {
     width: 140px;
     background-color: #fff;
     border-radius: 5px;
 }
+
 #blog-txt,
 #code-txt,
 #project-txt,
 #database-txt,
-#about-txt{
+#about-txt {
     display: none;
 }
-.fw{
+
+.fw {
     display: flex;
     flex-direction: column;
 }
-@media screen and (max-width: 490px){
-    #tabs{
+
+@media screen and (max-width: 490px) {
+    #tabs {
         grid-column: span 4;
         padding-bottom: 5px;
         margin-bottom: 5px;
         border-bottom: 2px solid #7B61FF;
     }
 
-    #text{
+    #text {
         grid-column: span 4;
     }
 }
@@ -154,49 +161,53 @@ background-color: transparent;
 
 
 /* cards css */
-#pdf-cards{
+#pdf-cards {
     /* background-color: red; */
     display: flex;
     flex-wrap: wrap;
     width: 90%;
-     
+
     justify-content: center;
-    margin:0 auto;
-    padding: 50px 0px ;
+    margin: 0 auto;
+    padding: 50px 0px;
     gap: 50px;
     margin-bottom: 30px;
 }
-#card{
+
+#card {
     height: 200px;
     width: 300px;
-   display: flex;
-flex-direction: column;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     border-radius: 20px;
     text-decoration: none;
     color: white;
     gap: 20px;
-        background: linear-gradient(210.66deg, rgba(175, 198, 255, 0.157) 60.09%, rgba(255, 255, 255, 0) 93.19%);
+    background: linear-gradient(210.66deg, rgba(175, 198, 255, 0.157) 60.09%, rgba(255, 255, 255, 0) 93.19%);
 }
- 
 
-#card-body{
+
+#card-body {
     display: flex;
     justify-content: center;
 }
-@media (max-width: 1009px){
+
+@media (max-width: 1009px) {
     .fwbox>img {
-            width: 100px;
-        }
-   #contaniner{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-   }
-   #tabs{
-    width: 50%;
-   }
+        width: 100px;
+    }
+
+    #contaniner {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
+
+    #tabs {
+        width: 40vmax;
+    }
 }
