--- a/src/styles/Aboutus.css
+++ b/src/styles/Aboutus.css
@@ -1,16 +1,52 @@
 #ABT-hero {
     min-height: 90vh;
     background-color: black;
-    background: url("../assets/about-bg.jpg");
+    /* background: url("../assets/about-bg2.jpg"); */
     background-repeat: no-repeat;
     background-size: cover;
+    display: flex;
+    align-items: center;
 
+
+}
+
+.abtvideo {
+
+    width: 100%;
+    object-fit: cover;
+
+    height: 100%;
+    display: flex;
+    position: absolute;
+    opacity: 0.8;
+    right: 0%;
+
+}
+
+.abtv1 {
+    height: 100% !important;
+
+}
+
+.abtoverlay01 {
+    width: 100%;
+
+    object-fit: cover;
+
+    display: flex;
+    position: absolute;
+    opacity: 1;
+    right: 0%;
+    bottom: 0%;
+    background: rgb(0, 0, 0);
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.505) 39%, rgba(0, 0, 0, 0.308) 77%, rgba(0, 0, 0, 1) 100%);
 }
 
 #ABTsec2 {
     width: 100%;
     height: 100%;
     display: flex;
+
     flex-direction: row;
     gap: 20px;
     padding: 20px;
@@ -219,9 +255,11 @@
     flex-direction: column;
     z-index: 0;
 }
-#ABTgif{
-    border-radius: 10   px;
+
+#ABTgif {
+    border-radius: 10 px;
 }
+
 #ABTright3 {
 
     width: 50%;
@@ -236,43 +274,46 @@
 
     width: "100%";
     height: "fit-content";
-    
+
 }
-#carousel{
+
+#carousel {
     /* width: 90vw; */
-    padding : 40px 80px 30px 80px;
+    padding: 40px 80px 30px 80px;
     /* background-color: #f88410; */
 }
-#cor-card{
+
+#cor-card {
     background-color: #353432;
     padding: 20px;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     gap: 10px;
-   width: 90%;
-   min-height: 250px;
+    width: 90%;
+    min-height: 250px;
 }
-#cor-card>h1{
+
+#cor-card>h1 {
     text-transform: uppercase;
     font-weight: 800;
 }
-#cor-card>h3{
+
+#cor-card>h3 {
     font-size: 15px;
     text-transform: uppercase;
     font-weight: 700;
 }
-#cor-card>p{
-    
-}
+
+#cor-card>p {}
 
 @media (max-width:768px) {
 
     #carousel {
-            /* width: 90vw; */
-            padding: 40px 0px 30px 0px;
-            /* background-color: #f88410; */
-        }
+        /* width: 90vw; */
+        padding: 40px 0px 30px 0px;
+        /* background-color: #f88410; */
+    }
 
     #ABTsec2 {
         flex-direction: column-reverse;
@@ -290,12 +331,12 @@
     #ABTright {
         display: none;
     }
-       
+
 
 }
 
 @media (max-width:500px) {
-.ABTright3>img {
+    .ABTright3>img {
 
         height: fit-content;
         width: 90vw;
@@ -304,6 +345,7 @@
 
     }
 }
+
 @media (max-width:1000px) {
 
 
