--- a/src/styles/Section5.css
+++ b/src/styles/Section5.css
@@ -1,122 +1,158 @@
-.s5main{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-    background-repeat: no-repeat;
-    background-color: black;
-   margin: 50px 0px;
-    justify-content: center;
-    align-items: center;
+.s5main {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  background-repeat: no-repeat;
+  background-color: black;
+  margin: 50px 0px;
+  justify-content: center;
+  align-items: center;
 }
-.s6main{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    margin: 50px 0px;
-    flex-direction: row-reverse;
-    background-repeat: no-repeat;
-    background-color: black;
-    justify-content: center;
-    align-items: center;
+
+.s6main {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  margin: 50px 0px;
+  flex-direction: row-reverse;
+  background-repeat: no-repeat;
+  background-color: black;
+  justify-content: center;
+  align-items: center;
 }
-.s5heading{
-    font-size: 45px;
-    font-weight: 900;
-    font-family: 'Manrope', sans-serif;
-    letter-spacing: 1px;
+
+.s5heading {
+  font-size: 45px;
+  font-weight: 900;
+  font-family: 'Manrope', sans-serif;
+  letter-spacing: 1px;
 }
 
 
 
-.showcase{
-    width:100%;
-    height: 100vh;
-    position: relative;
+.showcase {
+  width: 100%;
+  height: 100vh;
+  position: relative;
 }
-.showcase img{
-    width:100%;
-    height: 100%;
-    position: absolute;
-    top:0;
-    left:0;
-    object-fit: cover;
+
+.showcase img {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  object-fit: cover;
 }
-.etitle{
-    width: 100%;
-    height:100%;
-    background-color: #000000;
-    color:#fff;
-    font-size: 100px;
-    mix-blend-mode: multiply;
+
+.etitle {
+  width: 100%;
+  height: 100%;
+  background-color: #000000;
+  color: #fff;
+  font-size: 100px;
+  mix-blend-mode: multiply;
 }
-.s5data{
+
+.s5data {
   display: flex;
   flex-direction: column;
   gap: 10px;
 }
-.s5left{
-    
-    padding: 40px;
-   width: 47%;
+
+.s5left {
+
+  padding: 40px;
+  width: 47%;
 }
-.s5right{
-   
-    width: 50%;
+
+.s5right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
 }
-.s5para{
-    font-size: 18px;
-    width: 100%;
-    margin-bottom: 10px;
+
+.radialgradient {
+  z-index: 1;
+  position: absolute;
+  height: 102%;
+  width: 102%;
+  /* background: rgb(0, 0, 0);
+  background: radial-gradient(circle, rgba(0, 0, 0, 0.006127450980392135) 0%, rgba(0, 0, 0, 1) 74%); */
+  background: rgb(0, 0, 0);
+  background: linear-gradient(90deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 39%, rgba(0, 0, 0, 0.006127450980392135) 62%, rgba(0, 0, 0, 1) 100%);
+
 }
-.contentdiv{
-    display: flex;
-    flex-direction: row;
-    gap: 40px;
+
+.rg2 {
+  z-index: 1;
+  position: absolute;
+  height: 102%;
+  width: 102%;
+  /* background: rgb(0, 0, 0);
+  background: radial-gradient(circle, rgba(0, 0, 0, 0.006127450980392135) 0%, rgba(0, 0, 0, 1) 74%); */
+  background: rgb(0, 0, 0);
+  background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 39%, rgba(0, 0, 0, 0.006127450980392135) 62%, rgba(0, 0, 0, 1) 100%);
+
+}
+
+.s5para {
+  font-size: 18px;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.contentdiv {
+  display: flex;
+  flex-direction: row;
+  gap: 40px;
 
 }
 
 .title {
-	font-family: 'Urbanist', sans-serif;
-	color: #FFF;
-	display: flex;
-	flex-direction: column;
-	/* align-items: center; */
-	justify-content: center;
-	
-	letter-spacing: 1px;
-	line-height:2
+  font-family: 'Urbanist', sans-serif;
+  color: #FFF;
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  justify-content: center;
+
+  letter-spacing: 1px;
+  line-height: 2
 }
 
 .title p {
-	background-image: url(https://media.giphy.com/media/26BROrSHlmyzzHf3i/giphy.gif);
-	background-size: cover;
-	color: transparent;
-	-moz-background-clip: text;
-	-webkit-background-clip: text;
-	text-transform: uppercase;
-	font-size: 50px;
+  background-image: url(https://media.giphy.com/media/26BROrSHlmyzzHf3i/giphy.gif);
+  background-size: cover;
+  color: transparent;
+  -moz-background-clip: text;
+  -webkit-background-clip: text;
+  text-transform: uppercase;
+  font-size: 50px;
   font-weight: bolder;
-	margin: 10px 0;
+  margin: 10px 0;
 }
+
 /* styling my button */
 
 .white-mode {
-	text-decoration: none;
-	padding: 7px 10px;
-	background-color: #122;
-	border-radius: 3px;
-	color: #FFF;
-	transition: .35s ease-in-out;
-	position: absolute;
-	left: 15px;
-	bottom: 15px;
-	font-family: "Montserrat";
+  text-decoration: none;
+  padding: 7px 10px;
+  background-color: #122;
+  border-radius: 3px;
+  color: #FFF;
+  transition: .35s ease-in-out;
+  position: absolute;
+  left: 15px;
+  bottom: 15px;
+  font-family: "Montserrat";
 }
 
 .white-mode:hover {
-	background-color: #FFF;
-	color: #122;
+  background-color: #FFF;
+  color: #122;
 }
 
 
@@ -160,28 +196,33 @@ opacity: 0.5;
   }
   } */
 
-@media (max-width:768px){
-    .s5main{
-      flex-direction: column-reverse;
-      width: 100%;
-      height: 100%;
-    }
-    .s6main{
-        flex-direction: column-reverse;
-        width: 100%;
-        height: 100%;
-      }
-      .s5heading{
-        font-size: 35px;
-      }
-    .s5left{
-      width: 100%;
-    }
-    .s5right{
-      width: 100%;
-    }
-    .s5para{
-      font-size: 14px;
-    }
-    
+@media (max-width:768px) {
+  .s5main {
+    flex-direction: column-reverse;
+    width: 100%;
+    height: 100%;
   }
+
+  .s6main {
+    flex-direction: column-reverse;
+    width: 100%;
+    height: 100%;
+  }
+
+  .s5heading {
+    font-size: 35px;
+  }
+
+  .s5left {
+    width: 100%;
+  }
+
+  .s5right {
+    width: 99%;
+  }
+
+  .s5para {
+    font-size: 14px;
+  }
+
+}
