--- a/src/service/CryptoWallet.css
+++ b/src/service/CryptoWallet.css
@@ -41,6 +41,7 @@
   height: 100%;
   display: flex;
   flex-direction: row;
+  align-items: center;
   gap: 20px;
   padding: 20px;
   margin-top: 40px;
@@ -87,10 +88,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  z-index: 0
-  
-  
-  ;
+  z-index: 0;
 }
 
 #s5main {
