--- a/src/service/Staking.css
+++ b/src/service/Staking.css
@@ -42,6 +42,7 @@
   display: flex;
   flex-direction: row;
   gap: 20px;
+  align-items: center;
   padding: 20px;
   margin-top: 40px;
   margin-bottom: 5%;
@@ -339,7 +340,7 @@
 .n5card .n5hover_content {
   overflow: hidden;
   max-height: 0;
-  
+
   transform: translateY(1em);
   transition: all 0.55s ease;
 }
