--- a/src/styles/C-Service.css
+++ b/src/styles/C-Service.css
@@ -3,6 +3,7 @@
     height: 100%;
     display: flex;
     flex-direction: row;
+    align-items: center;
     gap: 20px;
     padding: 20px;
     margin-top: 40px;
