Home page updated

--- a/src/styles/S3Cards.css
+++ b/src/styles/S3Cards.css
@@ -29,7 +29,7 @@
 }
 
 .content {
-  padding: 70px 60px 0px 30px;
+  padding: 60px 60px 0px 30px;
   transform: translate3d(0, 0, 26px);
 }
 
@@ -37,13 +37,14 @@
   display: block;
   color: #ffffff;
   font-weight: bolder;
-  font-size: 17px;
+  font-size: 18px;
 }
 
 .content .text {
   display: block;
   color: rgba(255, 255, 255, 0.765);
-  font-size: 13px;
+  font-size: 15px;
+  line-height: 18px;
   margin-top: 20px;
   text-align: left;
 }
@@ -181,24 +182,24 @@
 .logo .circle3 {
   width: 80px;
   transform: translate3d(0, 0, 60px);
-  top: 17px;
-  right: 17px;
+  top: 0px;
+  right: 16px;
   transition-delay: 0.8s;
 }
 
 .logo .circle4 {
   width: 60px;
   transform: translate3d(0, 0, 80px);
-  top: 23px;
-  right: 23px;
+  top: 10px;
+  right: 26px;
   transition-delay: 1.2s;
 }
 
 .logo .circle5 {
   width: 40px;
   transform: translate3d(0, 0, 100px);
-  top: 30px;
-  right: 30px;
+  top: 20px;
+  right: 37px;
   display: grid;
   place-content: center;
   transition-delay: 1.6s;
