--- a/src/styles/PR.css
+++ b/src/styles/PR.css
@@ -1,11 +1,13 @@
  #pr-main {
-     min-height: 100vh;
+     min-height: 50vh;
      width: 100vw;
      display: flex;
      justify-content: center;
+     align-items: center;
+     overflow: hidden;
 
      #pr-head {
-         margin-top: 10vmax;
+         /* margin-top: 10vmax; */
          display: flex;
          flex-direction: column;
          /* justify-content: center; */
@@ -29,6 +31,7 @@
  }
 
  .title {
+
      margin-bottom: 20px;
  }
 
@@ -43,3 +46,87 @@
      background-color: rgb(255, 255, 255);
  }
 
+ #pr-image-main {
+     width: 100vw;
+     overflow: hidden;
+     display: flex;
+     justify-content: center;
+
+     #pr-rocket {
+         width: 100vmax;
+     }
+ }
+
+ #pr-topmedia {
+     margin: 10px auto;
+     /* height: 100vh; */
+     width: 90vw;
+     display: flex;
+     gap: 30px;
+     flex-wrap: wrap;
+     justify-content: center;
+
+     .pr-brand {
+         height: 100px;
+         width: 300px;
+         border-radius: 20px;
+         display: flex;
+         justify-content: center;
+         align-items: center;
+         /* background-color: white; */
+         overflow: hidden;
+
+
+         .brand-img {
+
+             /* height : 90%;  */
+             width: 60%;
+
+         }
+     }
+
+ }
+
+ @media (max-width:765px) {
+     #pr-topmedia {
+
+         gap: 20px;
+
+
+         .pr-brand {
+             height: 100px;
+             width: 200px;
+
+
+             .brand-img {
+
+                 /* height : 90%;  */
+                 width: 90%;
+
+             }
+         }
+
+     }
+ }
+
+ @media (max-width:500px) {
+     #pr-topmedia {
+
+         gap: 20px;
+
+
+         .pr-brand {
+             height: 80px;
+             width: 100px;
+
+
+             .brand-img {
+
+                 /* height : 90%;  */
+                 width: 100%;
+
+             }
+         }
+
+     }
+ }
