--- a/src/styles/NavOption.css
+++ b/src/styles/NavOption.css
@@ -14,6 +14,7 @@ buttonb {
   transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
   transition-duration: 400ms;
   transition-property: color;
+  /* text-wrap:nowrap; */
 }
 
 buttonb:focus,
@@ -25,6 +26,7 @@ buttonb:focus:after,
 buttonb:hover:after {
   width: 100%;
   left: 0%;
+   
 }
 
 buttonb:after {
