--- a/src/styles/Section9.css
+++ b/src/styles/Section9.css
@@ -39,7 +39,7 @@
 .query{
    width: 100%;
    height: 100%;
- background-image: url('/public/NFTDev/query.jpg');
+ background-image: url('/NFTDev/query.jpg');
    background-size: cover;
    background-position: bottom center;
    background-repeat: no-repeat;
