--- a/src/service/Crypto.css
+++ b/src/service/Crypto.css
@@ -19,7 +19,8 @@
 .cryptosec1main {
   background-size: cover;
   object-fit: cover;
-  background-color: #0010293e;
+  background-color: #0000005a;
+
   /* background-image: url('../../public/Crypto/token1.jpg'); */
   background-position-y: bottom;
   background-position: right;
@@ -93,14 +94,33 @@
     rgba(0, 0, 0, 1) 100%
   );
 }
+.overlay02 {
+  width: 100%;
+
+  object-fit: cover;
+  height: 100%;
+  display: flex;
+  position: absolute;
+  opacity: 1;
+  right: 0%;
+  bottom: 0%;
+  background: rgb(0, 0, 0);
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 0) 39%,
+    rgba(0, 0, 0, 0.198) 77%,
+    rgba(0, 0, 0, 1) 100%
+  );
+}
 
 #cryptoleft {
-  width: 50%;
+  max-width: 800px;
   height: 100%;
   z-index: 0;
   display: flex;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
   flex-direction: column;
 }
 
@@ -186,6 +206,9 @@
   line-height: 28.25px;
   /* 175% */
 }
+.text-shadow {
+  text-shadow: 5px 5px 10px rgb(36, 0, 52);
+}
 
 .cryptopara {
   font-size: 18px;
@@ -196,8 +219,8 @@
   display: flex;
   flex-direction: row;
   gap: 2vmax;
-  justify-content: flex-start;
-  width: 100%;
+  /* justify-content: flex-start; */
+  width: fit-content;
 }
 
 /* CARDS */
@@ -483,7 +506,7 @@
 
 @media (max-width: 768px) {
   .cryptosec1main {
-    background-color: #00000090;
+    /* background-color: #00000090; */
   }
 
   .n5container {
