--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,8 @@
-
-body{
-  font-family: Manrope,TypoGraphica, Gilroy,Raleway, sans-serif;
+body {
+  font-family: Manrope, TypoGraphica, Gilroy, Raleway, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  
+
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #000000;
@@ -14,61 +13,59 @@ body{
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
- 
+html {
+  scroll-behavior: smooth;
+}
+
 @font-face {
   font-family: "TypoGraphica";
   src: local("TypoGraphica"),
-   url("./fonts/Typographica-Blp5/.ttf") format("truetype");
+    url("./fonts/Typographica-Blp5/.ttf") format("truetype");
   font-weight: bold;
- }
- @font-face {
+}
+@font-face {
   font-family: "Quantify";
-  src: local("Quantify"),
-   url("./fonts/Quantify-8M80Z/.ttf") format("truetype");
+  src: local("Quantify"), url("./fonts/Quantify-8M80Z/.ttf") format("truetype");
   font-weight: bold;
- }
- @font-face {
+}
+@font-face {
   font-family: "Raleway";
-  src: local("Raleway"),
-   url("./fonts/Raleway/.ttf") format("truetype");
+  src: local("Raleway"), url("./fonts/Raleway/.ttf") format("truetype");
   font-weight: bold;
- }
- @font-face {
+}
+@font-face {
   font-family: "Raleway";
-  src: local("Raleway"),
-   url("./fonts/RalewayBold/.ttf") format("truetype");
+  src: local("Raleway"), url("./fonts/RalewayBold/.ttf") format("truetype");
   font-weight: bold;
- }
- @font-face {
+}
+@font-face {
   font-family: "QUICK-ZIP";
-  src: local("QUICK-ZIP"),
-   url("./fonts/QUICK-ZIP.ttf") format("truetype");
-  
- }
- @font-face {
+  src: local("QUICK-ZIP"), url("./fonts/QUICK-ZIP.ttf") format("truetype");
+}
+@font-face {
   font-family: "HelloPagon-Black";
   src: local("HelloPagon-Black"),
-   url("./fonts/HelloPagon-Black.ttf") format("truetype");
+    url("./fonts/HelloPagon-Black.ttf") format("truetype");
   font-weight: bold;
- }
+}
 
-    ::-webkit-scrollbar {
-      width: 10px;
-      /* Set the width as per your preference */
-    }
-        ::-webkit-scrollbar-track {
-          background-color: #f1f1f1;
-          /* Set the background color of the track */
-        }
-    
-        ::-webkit-scrollbar-thumb {
-          background-color: #888;
-          /* Set the color of the scrollbar thumb */
-          border-radius: 5px;
-          /* Optional: Set border-radius for rounded corners */
-        }
-    
-        /* Optional: Set hover styles for the scrollbar thumb */
-        ::-webkit-scrollbar-thumb:hover {
-          background-color: #555;
-        }
+::-webkit-scrollbar {
+  width: 10px;
+  /* Set the width as per your preference */
+}
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+  /* Set the background color of the track */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888;
+  /* Set the color of the scrollbar thumb */
+  border-radius: 5px;
+  /* Optional: Set border-radius for rounded corners */
+}
+
+/* Optional: Set hover styles for the scrollbar thumb */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
