--- a/src/styles/Section6.css
+++ b/src/styles/Section6.css
@@ -1,135 +1,129 @@
 .s7main {
-    width: 100%;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    background-repeat: no-repeat;
-    background-image: url("../assets/landing.jpg");
-    background-size: cover;
+  width: 100%;
+  min-height: 70vh;
+  display: flex;
+  flex-direction: column;
+  background-repeat: no-repeat;
+  background-image: url("../assets/landing.jpg");
+  background-size: cover;
 
-    background-position: center;
-    justify-content: center;
-    align-items: center;
-    position: relative;
+  background-position: center;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 }
 
 .s7para1 {
-    font-family: 'Manrope', sans-serif;
-    letter-spacing: 2px;
-    font-size: 35px;
-    font-weight: bolder;
-
+  font-family: "Manrope", sans-serif;
+  letter-spacing: 2px;
+  font-size: 35px;
+  font-weight: bolder;
 }
 
 .s6overlay {
-    width: 100%;
-    min-height: 100%;
-    background-color: #00000043;
-    mix-blend-mode: multiply;
-    position: absolute;
+  width: 100%;
+  min-height: 100%;
+  background-color: #00000043;
+  mix-blend-mode: multiply;
+  position: absolute;
 }
 
 .conta {
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    z-index: 0;
-    background-color: transparent;
+  /* position: relative; */
+  width: 100%;
+  height: fit-content;
 
+  background-color: transparent;
 }
 
 .fwbox {
-
-    display: inline-block;
-    min-height: 106px;
-    min-width: 106px;
-    padding: 18px 0 10px;
-
+  display: inline-block;
+  min-height: 106px;
+  min-width: 106px;
+  padding: 18px 0 10px;
 }
 
 #contaniner {
+  border-radius: 15px;
 
-    border-radius: 15px;
+  width: 140%;
+  padding: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  column-gap: 50px;
+  background-color: transparent;
+  /* position: absolute; */
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 
-    width: 140%;
-    padding: 20px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    column-gap: 50px;
-    background-color: transparent;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-
-
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 #header {
-    grid-column: span 4;
-    padding-bottom: 5px;
+  grid-column: span 4;
+  padding-bottom: 5px;
 }
 
 #header p {
-    font-size: 22px;
-    font-weight: 700;
+  font-size: 22px;
+  font-weight: 700;
 }
 
 #tabs {
-    display: flex;
-    background-color: transparent;
-    padding: 10px;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  display: flex;
+  background-color: transparent;
+  padding: 10px;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 #tabs input {
-    display: none;
+  display: none;
 }
 
 #tabs label {
-    border-radius: 5px;
-    width: 100%;
-    min-width: 127px;
-    margin: 0 auto;
-    padding: 5px 10px;
-    cursor: pointer;
+  border-radius: 5px;
+  width: 100%;
+  min-width: 127px;
+  margin: 0 auto;
+  padding: 5px 10px;
+  cursor: pointer;
 }
 
 #home-lb {
-    /* background-color: #7B61FF; */
+  /* background-color: #7B61FF; */
 }
 
 .boxdetail {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 10px;
-    /* flex-wrap: wrap; */
-    align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 10px;
+  /* flex-wrap: wrap; */
+  align-items: center;
 }
 
 #text {
-    grid-column: span 3;
-    background-color: transparent;
-    padding: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  grid-column: span 3;
+  background-color: transparent;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #text .txt-head {
-    font-weight: 600;
-    font-size: 18px;
-    padding: 5px 0;
+  font-weight: 600;
+  font-size: 18px;
+  padding: 5px 0;
 }
 
 .fwimg {
-    width: 140px;
-    background-color: #fff;
-    border-radius: 5px;
+  width: 140px;
+  background-color: #fff;
+  border-radius: 5px;
 }
 
 #blog-txt,
@@ -137,77 +131,77 @@
 #project-txt,
 #database-txt,
 #about-txt {
-    display: none;
+  display: none;
 }
 
 .fw {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 @media screen and (max-width: 490px) {
-    #tabs {
-        grid-column: span 4;
-        padding-bottom: 5px;
-        margin-bottom: 5px;
-        border-bottom: 2px solid #7B61FF;
-    }
-
-    #text {
-        grid-column: span 4;
-    }
+  #tabs {
+    grid-column: span 4;
+    padding-bottom: 5px;
+    margin-bottom: 5px;
+    border-bottom: 2px solid #7b61ff;
+  }
+  .s7para1 {
+    font-size: 22px;
+  }
 }
-
-
 
 /* cards css */
 #pdf-cards {
-    /* background-color: red; */
-    display: flex;
-    flex-wrap: wrap;
-    width: 90%;
+  /* background-color: red; */
+  display: flex;
+  flex-wrap: wrap;
+  width: 90%;
 
-    justify-content: center;
-    margin: 0 auto;
-    padding: 50px 0px;
-    gap: 50px;
-    margin-bottom: 30px;
+  justify-content: center;
+  margin: 0 auto;
+  padding: 50px 0px;
+  gap: 50px;
+  margin-bottom: 30px;
 }
 
 #card {
-    height: 200px;
-    width: 300px;
+  height: 200px;
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+  text-decoration: none;
+  color: white;
+  gap: 20px;
+  background: linear-gradient(
+    210.66deg,
+    rgba(175, 198, 255, 0.157) 60.09%,
+    rgba(255, 255, 255, 0) 93.19%
+  );
+}
+
+#card-body {
+  display: flex;
+  justify-content: center;
+}
+
+@media (max-width: 1009px) {
+  .fwbox > img {
+    width: 100px;
+  }
+
+  #contaniner {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-radius: 20px;
-    text-decoration: none;
-    color: white;
-    gap: 20px;
-    background: linear-gradient(210.66deg, rgba(175, 198, 255, 0.157) 60.09%, rgba(255, 255, 255, 0) 93.19%);
-}
+    width: 100%;
+  }
 
-
-#card-body {
-    display: flex;
-    justify-content: center;
-}
-
-@media (max-width: 1009px) {
-    .fwbox>img {
-        width: 100px;
-    }
-
-    #contaniner {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-    }
-
-    #tabs {
-        width: 40vmax;
-    }
+  #tabs {
+    width: 40vmax;
+  }
 }
